# scoped-ref

./: Cargo.toml  changelog.md  readme.md
src/: lib.rs  scoped_ref.rs  scoped_ref_guard.rs  tests.rs  type_connector.rs
