[package]
name = "scoped-static"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }

[features]
default = [ "runtime-std" ]
runtime-std = [ "crossbeam" ]
runtime-tokio = [ "tokio", "tokio/rt-multi-thread", "tokio/time", "tokio/macros", "tokio/sync" ]
no-pin = []
