[package]
name = "scoped-ref"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "A fast, lightweight, and safe way to use non-static data where static is expected"
repository = "https://github.com/What42Pizza/scoped-ref"
readme = "readme.md"
keywords = []
categories = []

[dependencies]
tokio = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }

[features]
default = [ "runtime-tokio", "drop-does-block" ]
runtime-none = [ "crossbeam" ]
runtime-tokio = [ "tokio", "tokio/rt-multi-thread", "tokio/time", "tokio/macros", "tokio/sync" ]
no-pin = []
drop-does-block = []
unsafe-drop-does-panic = []
unsafe-drop-does-nothing = []
